# Pose2SimAdditionalTools

./: README.md  setup.cfg  setup.py
pipelineMarkerless/: pipelineMarkerless.py  synchronisation.py
