[metadata]
name = pose2sim
version = 0.1.0
author = Camille ARNAULT
author_email = camille.arnault@univ-poitiers.fr
description = Personalize Pose2Sim module
long_description = file README.md
long_description_content_type = textmarkdown
url = https://github.com/Camille-ARNAULT/pipelineMarkerless
keywords = markerless, kinematics, OpenSim, 3D human pose, biomechanics
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Modeling
project_urls = 
    Bug Tracker = https://github.com/Camille-ARNAULT/pipelineMarkerless/issues
    
[options]
zip_safe = False
python_requires = >=3.9
install_requires = 
    skelly_synchronize
	pose2sim
packages = find_namespace:
